implemented visual effects for RadiationSystem and another changes